y.output
   0  $accept : programa $end

   1  programa : nombrep '{' sentencias '}'
   2           | '{' sentencias '}'
   3           | nombrep sentencias '}'
   4           | nombrep '{' sentencias
   5           | nombrep '{' '}'
   6           | nombrep '{' sentencias '}'

   7  nombrep : ID

   8  sentencias : bloqueDeclarativa sentencias
   9             | bloqueEjecutable sentencias
  10             | bloqueDeclarativa
  11             | bloqueEjecutable
  12             | control sentencias
  13             | control
  14             | ETIQUETA ':' control
  15             | ETIQUETA control
  16             | seleccion ELSE expresion ';'
  17             | seleccion ELSE ';'
  18             | seleccion ELSE
  19             | seleccion ELSE expresion
  20             | seleccion expresion

  21  control : FOR '(' ID ASIGN VALOR ';' condicion_for ';' '+' VALOR ')' '{' bloqueEjecutableFOR '}' ';'
  22          | FOR '(' ID ASIGN VALOR ';' condicion_for ';' '-' VALOR ')' '{' bloqueEjecutableFOR '}' ';'
  23          | FOR '(' ID ASIGN VALOR ';' condicion_for ';' VALOR ')' '{' bloqueEjecutableFOR '}' ';'
  24          | FOR '(' ID ASIGN VALOR ';' condicion_for ';' '+' VALOR ')' declarativa ';'
  25          | FOR '(' ID ASIGN VALOR ';' condicion_for ';' '-' VALOR ')' declarativa ';'
  26          | FOR '(' ID ASIGN VALOR ';' condicion_for ';' VALOR ')' declarativa ';'
  27          | FOR '(' ID ASIGN VALOR ';' condicion_for ';' '+' VALOR ')' '{' bloqueEjecutableFOR '}'
  28          | FOR '(' ID ASIGN VALOR ';' condicion_for ';' VALOR ')' '{' bloqueEjecutableFOR '}'
  29          | FOR '(' ID ASIGN VALOR ';' condicion_for ';' '-' VALOR ')' '{' bloqueEjecutableFOR '}'
  30          | FOR '(' ID ASIGN VALOR ';' condicion_for ';' '+' VALOR ')' declarativa
  31          | FOR '(' ID ASIGN VALOR ';' condicion_for ';' '-' VALOR ')' declarativa
  32          | FOR '(' ID ASIGN VALOR ';' condicion_for ';' VALOR ')' declarativa

  33  bloqueEjecutableFOR : bloqueEjecutableFOR ejecutables ';'
  34                      | bloqueEjecutableFOR BREAK ';'
  35                      | bloqueEjecutableFOR ':' BREAK ETIQUETA ';'
  36                      | ejecutables ';'
  37                      | BREAK ETIQUETA ';'
  38                      | BREAK ';'
  39                      | BREAK expresion ';'
  40                      | bloqueEjecutableFOR ejecutables
  41                      | bloqueEjecutableFOR BREAK
  42                      | bloqueEjecutableFOR BREAK ETIQUETA ';'
  43                      | bloqueEjecutableFOR ':' BREAK ETIQUETA
  44                      | ejecutables
  45                      | BREAK ETIQUETA
  46                      | BREAK
  47                      | BREAK expresion
  48                      | bloqueEjecutableFOR bloqueDeclarativa
  49                      | bloqueDeclarativa bloqueEjecutableFOR

  50  condicion_for : ID MAYORIGUAL expresion
  51                | ID MENORIGUAL expresion
  52                | ID expresion

  53  bloqueDeclarativa : bloqueDeclarativa declarativa ';'
  54                    | declarativa ';'
  55                    | declarativa

  56  bloqueEjecutable : bloqueEjecutable ejecutables ';'
  57                   | ejecutables ';'
  58                   | ejecutables

  59  declarativa :
  60              | variables
  61              | variable
  62              | FUN ID '(' parametros ')' ':' tipo '{' cuerpoFUN '}' ';'
  63              | FUN ID '(' parametros ')' tipo '{' cuerpoFUN '}' ';'
  64              | const listaconstantes ';'
  65              | const listaconstantes

  66  listaconstantes : listaconstantes ',' ID ASIGN VALOR
  67                  | ID ASIGN VALOR
  68                  | listaconstantes ID ASIGN VALOR

  69  parametros : variable ',' variable
  70             | variable
  71             | variable variable

  72  variable : tipo ID
  73           | tipo
  74           | ID

  75  variables : ID ',' variables
  76            | ID variables
  77            | ID

  78  cuerpoFUN : sentencias RETURN '(' retorno ')' ';'
  79            | sentencias RETURN '(' retorno ')'
  80            | sentencias RETURN retorno
  81            | sentencias

  82  retorno : expresion

  83  ejecutables : ID ASIGN expresion
  84              | funcion
  85              | salida
  86              | seleccion
  87              | WHEN '(' condicion ')' THEN '{' sentencias '}'
  88              | WHEN '(' condicion ')' sentencias

  89  expresion : termino '+' expresion
  90            | termino '-' expresion
  91            | termino '+' termino
  92            | termino '-' termino
  93            | termino termino
  94            | termino

  95  funcion : ID '(' parametrosreales ')'

  96  parametrosreales : factor ',' factor
  97                   | factor factor
  98                   | factor

  99  termino : termino '*' factor
 100          | termino '/' factor
 101          | termino factor
 102          | factor

 103  factor : ID
 104         | VALOR
 105         | funcion

 106  condicion : expresion MENORIGUAL expresion
 107            | expresion MAYORIGUAL expresion
 108            | expresion DISTINTO expresion
 109            | expresion IGUAL expresion
 110            | expresion expresion

 111  seleccion : IF '(' condicion ')' THEN '{' bloqueEjecutable '}' ELSE '{' bloqueEjecutable '}' END_IF ';'
 112            | IF '(' condicion ')' THEN '{' bloqueEjecutable '}' END_IF ';'
 113            | IF '(' condicion ')' THEN declarativa ELSE declarativa END_IF ';'
 114            | IF '(' condicion ')' THEN declarativa END_IF ';'
 115            | IF '(' condicion ')' THEN '{' bloqueEjecutable '}' ELSE '{' bloqueEjecutable '}' END_IF
 116            | IF '(' condicion ')' THEN '{' bloqueEjecutable '}' END_IF
 117            | IF '(' condicion ')' THEN declarativa ELSE declarativa END_IF
 118            | IF '(' condicion ')' THEN declarativa END_IF

 119  salida : OUT '(' CADENA ')'

 120  tipo : F
 121       | UI

 122  const : VALOR

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	'{'  shift 2
	.  error

	programa  goto 3
	nombrep  goto 4


state 1
	nombrep : ID .  (7)

	.  reduce 7


2: shift/reduce conflict (shift 5, reduce 59) on ID
2: shift/reduce conflict (shift 6, reduce 59) on IF
2: shift/reduce conflict (shift 7, reduce 59) on OUT
2: shift/reduce conflict (shift 8, reduce 59) on FUN
2: shift/reduce conflict (shift 9, reduce 59) on UI
2: shift/reduce conflict (shift 10, reduce 59) on F
2: shift/reduce conflict (shift 11, reduce 59) on WHEN
2: shift/reduce conflict (shift 12, reduce 59) on FOR
2: shift/reduce conflict (shift 13, reduce 59) on VALOR
2: shift/reduce conflict (shift 14, reduce 59) on ETIQUETA
state 2
	programa : '{' . sentencias '}'  (2)
	declarativa : .  (59)

	ID  shift 5
	IF  shift 6
	OUT  shift 7
	FUN  shift 8
	UI  shift 9
	F  shift 10
	WHEN  shift 11
	FOR  shift 12
	VALOR  shift 13
	ETIQUETA  shift 14
	'}'  reduce 59
	';'  reduce 59

	sentencias  goto 15
	bloqueDeclarativa  goto 16
	bloqueEjecutable  goto 17
	control  goto 18
	seleccion  goto 19
	declarativa  goto 20
	ejecutables  goto 21
	variables  goto 22
	variable  goto 23
	tipo  goto 24
	const  goto 25
	funcion  goto 26
	salida  goto 27


state 3
	$accept : programa . $end  (0)

	$end  accept


4: shift/reduce conflict (shift 5, reduce 59) on ID
4: shift/reduce conflict (shift 6, reduce 59) on IF
4: shift/reduce conflict (shift 7, reduce 59) on OUT
4: shift/reduce conflict (shift 8, reduce 59) on FUN
4: shift/reduce conflict (shift 9, reduce 59) on UI
4: shift/reduce conflict (shift 10, reduce 59) on F
4: shift/reduce conflict (shift 11, reduce 59) on WHEN
4: shift/reduce conflict (shift 12, reduce 59) on FOR
4: shift/reduce conflict (shift 13, reduce 59) on VALOR
4: shift/reduce conflict (shift 14, reduce 59) on ETIQUETA
state 4
	programa : nombrep . '{' sentencias '}'  (1)
	programa : nombrep . sentencias '}'  (3)
	programa : nombrep . '{' sentencias  (4)
	programa : nombrep . '{' '}'  (5)
	programa : nombrep . '{' sentencias '}'  (6)
	declarativa : .  (59)

	ID  shift 5
	IF  shift 6
	OUT  shift 7
	FUN  shift 8
	UI  shift 9
	F  shift 10
	WHEN  shift 11
	FOR  shift 12
	VALOR  shift 13
	ETIQUETA  shift 14
	'{'  shift 28
	'}'  reduce 59
	';'  reduce 59

	sentencias  goto 29
	bloqueDeclarativa  goto 16
	bloqueEjecutable  goto 17
	control  goto 18
	seleccion  goto 19
	declarativa  goto 20
	ejecutables  goto 21
	variables  goto 22
	variable  goto 23
	tipo  goto 24
	const  goto 25
	funcion  goto 26
	salida  goto 27


5: reduce/reduce conflict (reduce 74, reduce 77) on $end
5: shift/reduce conflict (shift 30, reduce 74) on ID
5: shift/reduce conflict (shift 30, reduce 77) on ID
5: reduce/reduce conflict (reduce 74, reduce 77) on IF
5: reduce/reduce conflict (reduce 74, reduce 77) on OUT
5: reduce/reduce conflict (reduce 74, reduce 77) on FUN
5: reduce/reduce conflict (reduce 74, reduce 77) on RETURN
5: reduce/reduce conflict (reduce 74, reduce 77) on BREAK
5: reduce/reduce conflict (reduce 74, reduce 77) on UI
5: reduce/reduce conflict (reduce 74, reduce 77) on F
5: reduce/reduce conflict (reduce 74, reduce 77) on WHEN
5: reduce/reduce conflict (reduce 74, reduce 77) on FOR
5: reduce/reduce conflict (reduce 74, reduce 77) on VALOR
5: reduce/reduce conflict (reduce 74, reduce 77) on ETIQUETA
5: reduce/reduce conflict (reduce 74, reduce 77) on '}'
5: reduce/reduce conflict (reduce 74, reduce 77) on ':'
5: reduce/reduce conflict (reduce 74, reduce 77) on ';'
state 5
	variable : ID .  (74)
	variables : ID . ',' variables  (75)
	variables : ID . variables  (76)
	variables : ID .  (77)
	ejecutables : ID . ASIGN expresion  (83)
	funcion : ID . '(' parametrosreales ')'  (95)

	ID  shift 30
	ASIGN  shift 31
	'('  shift 32
	','  shift 33
	$end  reduce 74
	IF  reduce 74
	OUT  reduce 74
	FUN  reduce 74
	RETURN  reduce 74
	BREAK  reduce 74
	UI  reduce 74
	F  reduce 74
	WHEN  reduce 74
	FOR  reduce 74
	VALOR  reduce 74
	ETIQUETA  reduce 74
	'}'  reduce 74
	':'  reduce 74
	';'  reduce 74

	variables  goto 34


state 6
	seleccion : IF . '(' condicion ')' THEN '{' bloqueEjecutable '}' ELSE '{' bloqueEjecutable '}' END_IF ';'  (111)
	seleccion : IF . '(' condicion ')' THEN '{' bloqueEjecutable '}' END_IF ';'  (112)
	seleccion : IF . '(' condicion ')' THEN declarativa ELSE declarativa END_IF ';'  (113)
	seleccion : IF . '(' condicion ')' THEN declarativa END_IF ';'  (114)
	seleccion : IF . '(' condicion ')' THEN '{' bloqueEjecutable '}' ELSE '{' bloqueEjecutable '}' END_IF  (115)
	seleccion : IF . '(' condicion ')' THEN '{' bloqueEjecutable '}' END_IF  (116)
	seleccion : IF . '(' condicion ')' THEN declarativa ELSE declarativa END_IF  (117)
	seleccion : IF . '(' condicion ')' THEN declarativa END_IF  (118)

	'('  shift 35
	.  error


state 7
	salida : OUT . '(' CADENA ')'  (119)

	'('  shift 36
	.  error


state 8
	declarativa : FUN . ID '(' parametros ')' ':' tipo '{' cuerpoFUN '}' ';'  (62)
	declarativa : FUN . ID '(' parametros ')' tipo '{' cuerpoFUN '}' ';'  (63)

	ID  shift 37
	.  error


state 9
	tipo : UI .  (121)

	.  reduce 121


state 10
	tipo : F .  (120)

	.  reduce 120


state 11
	ejecutables : WHEN . '(' condicion ')' THEN '{' sentencias '}'  (87)
	ejecutables : WHEN . '(' condicion ')' sentencias  (88)

	'('  shift 38
	.  error


state 12
	control : FOR . '(' ID ASIGN VALOR ';' condicion_for ';' '+' VALOR ')' '{' bloqueEjecutableFOR '}' ';'  (21)
	control : FOR . '(' ID ASIGN VALOR ';' condicion_for ';' '-' VALOR ')' '{' bloqueEjecutableFOR '}' ';'  (22)
	control : FOR . '(' ID ASIGN VALOR ';' condicion_for ';' VALOR ')' '{' bloqueEjecutableFOR '}' ';'  (23)
	control : FOR . '(' ID ASIGN VALOR ';' condicion_for ';' '+' VALOR ')' declarativa ';'  (24)
	control : FOR . '(' ID ASIGN VALOR ';' condicion_for ';' '-' VALOR ')' declarativa ';'  (25)
	control : FOR . '(' ID ASIGN VALOR ';' condicion_for ';' VALOR ')' declarativa ';'  (26)
	control : FOR . '(' ID ASIGN VALOR ';' condicion_for ';' '+' VALOR ')' '{' bloqueEjecutableFOR '}'  (27)
	control : FOR . '(' ID ASIGN VALOR ';' condicion_for ';' VALOR ')' '{' bloqueEjecutableFOR '}'  (28)
	control : FOR . '(' ID ASIGN VALOR ';' condicion_for ';' '-' VALOR ')' '{' bloqueEjecutableFOR '}'  (29)
	control : FOR . '(' ID ASIGN VALOR ';' condicion_for ';' '+' VALOR ')' declarativa  (30)
	control : FOR . '(' ID ASIGN VALOR ';' condicion_for ';' '-' VALOR ')' declarativa  (31)
	control : FOR . '(' ID ASIGN VALOR ';' condicion_for ';' VALOR ')' declarativa  (32)

	'('  shift 39
	.  error


state 13
	const : VALOR .  (122)

	.  reduce 122


state 14
	sentencias : ETIQUETA . ':' control  (14)
	sentencias : ETIQUETA . control  (15)

	FOR  shift 12
	':'  shift 40
	.  error

	control  goto 41


state 15
	programa : '{' sentencias . '}'  (2)

	'}'  shift 42
	.  error


16: reduce/reduce conflict (reduce 10, reduce 59) on $end
16: shift/reduce conflict (shift 5, reduce 10) on ID
16: shift/reduce conflict (shift 5, reduce 59) on ID
16: shift/reduce conflict (shift 6, reduce 10) on IF
16: shift/reduce conflict (shift 6, reduce 59) on IF
16: shift/reduce conflict (shift 7, reduce 10) on OUT
16: shift/reduce conflict (shift 7, reduce 59) on OUT
16: shift/reduce conflict (shift 8, reduce 10) on FUN
16: shift/reduce conflict (shift 8, reduce 59) on FUN
16: reduce/reduce conflict (reduce 10, reduce 59) on RETURN
16: reduce/reduce conflict (reduce 10, reduce 59) on BREAK
16: shift/reduce conflict (shift 9, reduce 10) on UI
16: shift/reduce conflict (shift 9, reduce 59) on UI
16: shift/reduce conflict (shift 10, reduce 10) on F
16: shift/reduce conflict (shift 10, reduce 59) on F
16: shift/reduce conflict (shift 11, reduce 10) on WHEN
16: shift/reduce conflict (shift 11, reduce 59) on WHEN
16: shift/reduce conflict (shift 12, reduce 10) on FOR
16: shift/reduce conflict (shift 12, reduce 59) on FOR
16: shift/reduce conflict (shift 13, reduce 10) on VALOR
16: shift/reduce conflict (shift 13, reduce 59) on VALOR
16: shift/reduce conflict (shift 14, reduce 10) on ETIQUETA
16: shift/reduce conflict (shift 14, reduce 59) on ETIQUETA
16: reduce/reduce conflict (reduce 10, reduce 59) on '}'
16: reduce/reduce conflict (reduce 10, reduce 59) on ':'
16: reduce/reduce conflict (reduce 10, reduce 59) on ';'
state 16
	sentencias : bloqueDeclarativa . sentencias  (8)
	sentencias : bloqueDeclarativa .  (10)
	bloqueDeclarativa : bloqueDeclarativa . declarativa ';'  (53)
	declarativa : .  (59)

	ID  shift 5
	IF  shift 6
	OUT  shift 7
	FUN  shift 8
	UI  shift 9
	F  shift 10
	WHEN  shift 11
	FOR  shift 12
	VALOR  shift 13
	ETIQUETA  shift 14
	$end  reduce 10
	RETURN  reduce 10
	BREAK  reduce 10
	'}'  reduce 10
	':'  reduce 10
	';'  reduce 10

	sentencias  goto 43
	bloqueDeclarativa  goto 16
	bloqueEjecutable  goto 17
	control  goto 18
	seleccion  goto 19
	declarativa  goto 44
	ejecutables  goto 21
	variables  goto 22
	variable  goto 23
	tipo  goto 24
	const  goto 25
	funcion  goto 26
	salida  goto 27


17: reduce/reduce conflict (reduce 11, reduce 59) on $end
17: shift/reduce conflict (shift 5, reduce 11) on ID
17: shift/reduce conflict (shift 5, reduce 59) on ID
17: shift/reduce conflict (shift 6, reduce 11) on IF
17: shift/reduce conflict (shift 6, reduce 59) on IF
17: shift/reduce conflict (shift 7, reduce 11) on OUT
17: shift/reduce conflict (shift 7, reduce 59) on OUT
17: shift/reduce conflict (shift 8, reduce 11) on FUN
17: shift/reduce conflict (shift 8, reduce 59) on FUN
17: reduce/reduce conflict (reduce 11, reduce 59) on RETURN
17: reduce/reduce conflict (reduce 11, reduce 59) on BREAK
17: shift/reduce conflict (shift 9, reduce 11) on UI
17: shift/reduce conflict (shift 9, reduce 59) on UI
17: shift/reduce conflict (shift 10, reduce 11) on F
17: shift/reduce conflict (shift 10, reduce 59) on F
17: shift/reduce conflict (shift 11, reduce 11) on WHEN
17: shift/reduce conflict (shift 11, reduce 59) on WHEN
17: shift/reduce conflict (shift 12, reduce 11) on FOR
17: shift/reduce conflict (shift 12, reduce 59) on FOR
17: shift/reduce conflict (shift 13, reduce 11) on VALOR
17: shift/reduce conflict (shift 13, reduce 59) on VALOR
17: shift/reduce conflict (shift 14, reduce 11) on ETIQUETA
17: shift/reduce conflict (shift 14, reduce 59) on ETIQUETA
17: reduce/reduce conflict (reduce 11, reduce 59) on '}'
17: reduce/reduce conflict (reduce 11, reduce 59) on ':'
17: reduce/reduce conflict (reduce 11, reduce 59) on ';'
state 17
	sentencias : bloqueEjecutable . sentencias  (9)
	sentencias : bloqueEjecutable .  (11)
	bloqueEjecutable : bloqueEjecutable . ejecutables ';'  (56)
	declarativa : .  (59)

	ID  shift 5
	IF  shift 6
	OUT  shift 7
	FUN  shift 8
	UI  shift 9
	F  shift 10
	WHEN  shift 11
	FOR  shift 12
	VALOR  shift 13
	ETIQUETA  shift 14
	$end  reduce 11
	RETURN  reduce 11
	BREAK  reduce 11
	'}'  reduce 11
	':'  reduce 11
	';'  reduce 11

	sentencias  goto 45
	bloqueDeclarativa  goto 16
	bloqueEjecutable  goto 17
	control  goto 18
	seleccion  goto 19
	declarativa  goto 20
	ejecutables  goto 46
	variables  goto 22
	variable  goto 23
	tipo  goto 24
	const  goto 25
	funcion  goto 26
	salida  goto 27


18: reduce/reduce conflict (reduce 13, reduce 59) on $end
18: shift/reduce conflict (shift 5, reduce 13) on ID
18: shift/reduce conflict (shift 5, reduce 59) on ID
18: shift/reduce conflict (shift 6, reduce 13) on IF
18: shift/reduce conflict (shift 6, reduce 59) on IF
18: shift/reduce conflict (shift 7, reduce 13) on OUT
18: shift/reduce conflict (shift 7, reduce 59) on OUT
18: shift/reduce conflict (shift 8, reduce 13) on FUN
18: shift/reduce conflict (shift 8, reduce 59) on FUN
18: reduce/reduce conflict (reduce 13, reduce 59) on RETURN
18: reduce/reduce conflict (reduce 13, reduce 59) on BREAK
18: shift/reduce conflict (shift 9, reduce 13) on UI
18: shift/reduce conflict (shift 9, reduce 59) on UI
18: shift/reduce conflict (shift 10, reduce 13) on F
18: shift/reduce conflict (shift 10, reduce 59) on F
18: shift/reduce conflict (shift 11, reduce 13) on WHEN
18: shift/reduce conflict (shift 11, reduce 59) on WHEN
18: shift/reduce conflict (shift 12, reduce 13) on FOR
18: shift/reduce conflict (shift 12, reduce 59) on FOR
18: shift/reduce conflict (shift 13, reduce 13) on VALOR
18: shift/reduce conflict (shift 13, reduce 59) on VALOR
18: shift/reduce conflict (shift 14, reduce 13) on ETIQUETA
18: shift/reduce conflict (shift 14, reduce 59) on ETIQUETA
18: reduce/reduce conflict (reduce 13, reduce 59) on '}'
18: reduce/reduce conflict (reduce 13, reduce 59) on ':'
18: reduce/reduce conflict (reduce 13, reduce 59) on ';'
state 18
	sentencias : control . sentencias  (12)
	sentencias : control .  (13)
	declarativa : .  (59)

	ID  shift 5
	IF  shift 6
	OUT  shift 7
	FUN  shift 8
	UI  shift 9
	F  shift 10
	WHEN  shift 11
	FOR  shift 12
	VALOR  shift 13
	ETIQUETA  shift 14
	$end  reduce 13
	RETURN  reduce 13
	BREAK  reduce 13
	'}'  reduce 13
	':'  reduce 13
	';'  reduce 13

	sentencias  goto 47
	bloqueDeclarativa  goto 16
	bloqueEjecutable  goto 17
	control  goto 18
	seleccion  goto 19
	declarativa  goto 20
	ejecutables  goto 21
	variables  goto 22
	variable  goto 23
	tipo  goto 24
	const  goto 25
	funcion  goto 26
	salida  goto 27


19: shift/reduce conflict (shift 48, reduce 86) on ID
19: shift/reduce conflict (shift 50, reduce 86) on VALOR
state 19
	sentencias : seleccion . ELSE expresion ';'  (16)
	sentencias : seleccion . ELSE ';'  (17)
	sentencias : seleccion . ELSE  (18)
	sentencias : seleccion . ELSE expresion  (19)
	sentencias : seleccion . expresion  (20)
	ejecutables : seleccion .  (86)
